--- a/es/org-mode-download.org
+++ b/es/org-mode-download.org
@@ -1,9 +1,9 @@
 #+TITLE: Org-Mode: Download and Install
 #+AUTHOR: Bastien
-#+LANGUAGE:  en
+#+LANGUAGE:  es
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+KEYWORDS:  Org Emacs outline planificación nota autoría proyecto texto-plano LaTeX HTML
+#+DESCRIPTION: Org: un Modo Emacs para Notas, Planificación y Autoría
 #+STYLE:     <base href="http://orgmode.org/" />
 #+STYLE:     <link rel="icon" type="image/png" href="org-mode-unicorn.png" />
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
@@ -20,48 +20,52 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-download
 </script>
 #+end_html
 
-* Current Version: Org 7.8.03
+* Actual Versión: Org 7.8.03
 
-The current version is 7.8.03.  To see what has changed in recent releases,
-check this detailed list of [[file:Changes.html][changes (english)]].
+La actual versión es la 7.8.03. Para ver qué ha cambiado en recientes
+entregas, visite esta detallada lista de [[file:Changes.html][cambios (inglés)]].
 
-This package works on GNU Emacs 24, 23 and 22, and (with minor
-restrictions) on XEmacs 21.  Emacs 22.2 ships with Org-mode version 4.67d,
-Emacs 23.1 with 6.21b.  The latest Emacs development version usually
-contains a fairly recent version, but may lag a bit behind the website
-release.
+Este paquete funciona en GNU Emacs 24, 23 y 22, y (con restricciones
+menores) en XEmacs 21. Emacs 22.2 funciona con la versión de Org-mode
+4.67d, Emacs 23.1 con 6.21b. La última versión del desarrollo de Emacs
+normalmente contiene una versión reciente, pero puede haber algo de
+retraso con respecto a la entrega que hay en el sitio web.
 
-* Downloads
+* Descargas
 
-** The standard distribution
+** La distribución estándar
 
-Download as [[file:org-7.8.03.zip][zip file]] or [[file:org-7.8.03.tar.gz][gzipped tar archive]].  These archives contain both
-the =org*.el= Lisp files and the documentation in PDF and (TeX)Info
-formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
+Descarga un [[file:org-7.8.03.zip][fichero zip]] o un [[file:org-7.8.03.tar.gz][archivo tar comprimido con gz]]. Estos
+archivos contienen los ficheros Lisp =org*.el= y la documentación en
+formatos PDF y (TeX)Info. Sigue las instrucciones para su [[http://orgmode.org/manual/Installation.html#Installation][Instalación]] y
+[[http://orgmode.org/manual/Activation.html#Activation][Activación]].
 
-** The development version
+** La versión en desarrollo
 
-You can check out the latest Org development version (along with every
-release we ever had) by using git.  The git repository is [[http://orgmode.org/w/org-mode.git][browsable
-online]].  At any time you can get a [[http://orgmode.org/w/org-mode.git/snapshot][snapshot]] of the files in it.  To get a
-local clone of the repository, type this (from the command line):
+Se puede chequear la última versión del desarrollo de Org (junto con
+todas las entregas que se han hecho) usando git. El repositorio git es [[http://orgmode.org/w/org-mode.git][navegable
+online]]. En cualquier momento se puede obtener una [[http://orgmode.org/w/org-mode.git/snapshot][fotografía]] de los
+ficheros que hay en él. Para obtener un clon local del repositorio,
+escribe esto (desde la línea de comandos):
 
 : git clone git://orgmode.org/org-mode.git
 
-Some more information about this can be found in the [[http://orgmode.org/worg/org-faq.php][FAQ]], under [[http://orgmode.org/worg/org-faq.php#keeping-current-with-Org-mode-development]["How do I
-keep current with Org mode development?"]].  For people who cannot use git,
-we provide [[file:org-latest.zip][zip]] or [[file:org-latest.tar.gz][tar.gz]] snapshot release files updated each day and
-corresponding to the latest git version.  Alternatively, you can also
-download a [[http://orgmode.org/w/org-mode.git/snapshot][tar.gz snapshot]] from orgmode.org server.
+Algo más de información puede encontrarse en la [[http://orgmode.org/worg/org-faq.php][FAQ]], bajo la pregunta [[http://orgmode.org/worg/org-faq.php#keeping-current-with-Org-mode-development]["How do I
+keep current with Org mode development?"]] (inglés). Para personas que
+no pueden usar git, se proporciona una entrega de ficheros
+actualizados cada día y correspondientes a la última versión del git
+en formato [[file:org-latest.zip][zip]] o [[file:org-latest.tar.gz][tar.gz]]. De manera alternativa, también se puede
+descargar un [[http://orgmode.org/w/org-mode.git/snapshot][snapshot en tar.gz]] desde el servidor orgmode.org
 
-** Alternative distributions
+** Distribuciones Alternativas
 
-   There are several alternative distributions of Org.  Some of these are
-   more up-to-date than others, so check if this package really has a
-   recent version.
+Hay varias distribuciones alternativas de Org. Algunas de estas están
+más actualizadas que otras, así comprueba si el siguiente paquete
+realmente tiene una versión reciente.
 
-   - The [[http://packages.debian.org/sid/main/org-mode][Debian package]] is maintained by Sebastien Delafond.
-   - There is also a package on [[http://aur.archlinux.org/packages.php?do_Details&ID=18206][Archlinux]], by Jiyunatori.
-   - The [[https://savannah.gnu.org/projects/emacs/][Emacs]] development version contains a more-or-less recent version.
-   - The [[http://pdb.finkproject.org/pdb/package.php/org-mode][Fink package]] for Mac OS X by Jesse Alama.
-   - The [[https://launchpad.net/~hexmode/+archive][Ubuntu package]] by Mark A. Hershberger.
+   - El [[http://packages.debian.org/sid/main/org-mode][paquete Debian]] mantenido por Sebastien Delafond.
+   - Hay también un paquete en [[http://aur.archlinux.org/packages.php?do_Details&ID=18206][Archlinux]], por Jiyunatori.
+   - La versión en desarrollo de [[https://savannah.gnu.org/projects/emacs/][Emacs]] contiene una versión más o
+     menos reciente.
+   - El [[http://pdb.finkproject.org/pdb/package.php/org-mode][paquete Fink]] para Mac OS X por Jesse Alama.
+   - El [[https://launchpad.net/~hexmode/+archive][paquete Ubuntu]] por Mark A. Hershberger.
