--- a/es/org-mode-links.org
+++ b/es/org-mode-links.org
@@ -1,9 +1,9 @@
-#+TITLE: Org-Mode: Links
+#+TITLE: Org-Mode: Enlaces
 #+AUTHOR: Bastien
-#+LANGUAGE:  en
+#+LANGUAGE:  es
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+KEYWORDS:  Org Emacs outline planificación nota autoría proyecto texto-plano LaTeX HTML
+#+DESCRIPTION: Org: un Modo Emacs para Notas, Planificación y Autoría
 #+STYLE:     <base href="http://orgmode.org/" />
 #+STYLE:     <link rel="icon" type="image/png" href="org-mode-unicorn.png" />
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
@@ -17,28 +17,31 @@ else
 var language = navigator.browserLanguage;
 if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-plus.html';
 if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-links.html';
+if (language.indexOf('es') > -1) document.location.href = '/es/org-mode-links.html';
 </script>
 #+end_html
 
-* Talks about Org-mode
+* Charlas acerca de Org-mode
 
-  Carsten Dominik gave a GoogleTech talk about Org-mode and another one at
-  the [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]].  FLOSS Weekly [[http://twit.tv/floss136][show
-  number 136]] Randal Schwartz interviews Carsten about Org mode.
+  Carsten Dominik dió una charla en GoogleTech acerca de Org-mode y
+  otra en el [[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][Max Planck Institute for Neurological Research]]. En FLOSS
+  Weekly [[tp://twit.tv/floss136][number 136]] Randal Schwartz entrevista a Carsten acerca de Org
+  mode.
 
-  Bastien presented Org at [[http://fosdem.org/2011/][FOSDEM 2011]], with the help of Stefan Vollmar
-  (presenting a use-case from his lab) and Sébastien Vauban (presenting Org
-  Babel).  You can find the PDF slides of the presentation [[http://lumiere.ens.fr/~guerry/u/org-fosdem-presentation-beamer.pdf][here]].  In August
-  2011, Bastien also gave a similar (but updated) presentation at the GNU
-  Hackers Meeting in Paris.
+  Bastien presentó Org en el [[http://fosdem.org/2011/][FOSDEM 2011]], con la ayuda de Stefan
+  Vollmar (presentando un caso de uso desde su laboratorio) y
+  Sébastien Vauban (presentando Org Babel). Se puede encontrar el PDF
+  de las presentaciones [[http://lumiere.ens.fr/~guerry/u/org-fosdem-presentation-beamer.pdf][aquí]].  En Agosto de 2011, Bastien también dió
+  una presentación similar (pero actualizada) presentación en el GNU
+  Hackers Meeting en París.
 
-  Check all talks on the [[file:talks.org][dedicated "talks" page]].
+  Visite todas las charlas en la [[file:talks.org][página dedicada a "charlas"]].
 
-* Org from your mobile
+* Org desde el móvil
 
-  [[http://mobileorg.ncogni.to/][MobileOrg]] is an excellent open source application to read and change
-  Org-files on the road, using an iPhone, and then sync the changes back to
-  your computer.  Check out Richard's [[http://mobileorg.ncogni.to/][page]].
+  [[http://mobileorg.ncogni.to/][MobileOrg]] es una excelente aplicación libre para leer y modificar
+  ficheros Org desde la calle, usando un iPhone, y sincronizar los
+  cambios con su ordenador. Visite la [[http://mobileorg.ncogni.to/][página de Richard]].
 
-  Matt Jones is currently developing a compatible application for Android,
-  and this project is [[http://wiki.github.com/matburt/mobileorg-android/][hosted here]].
+  Matt Jones está desarrollando una aplicación compatible para Android,
+  y dicho proyecto [[http://wiki.github.com/matburt/mobileorg-android/][alojado aquí]].
