--- a/fr/org-mode-support.org
+++ b/fr/org-mode-support.org
@@ -53,7 +53,7 @@ la liste de discussion.  Si vous voulez envoyer un correctif, un bout de
 code ou bien un module complet, n'hésitez pas  !  Des informations
 détaillées sur comment et sur quoi contribuer sont disponibles [[http://orgmode.org/worg/org-contribute.php][ici]].
 
-** 3 deniers commits git
+** 3 derniers commits git
 
 #+begin_html
 <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Forgmode.org%2Fw%2F%3Fp%3Dorg-mode.git%3Ba%3Drss%3Bopt%3D--no-merges&num=3&au=y&date=y&targ=y&utf=y&css=feed"  charset="UTF-8" type="text/javascript"></script>
