--- a/es/org-mode-documentation.org
+++ b/es/org-mode-documentation.org
@@ -20,19 +20,19 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-document
 </script>
 #+end_html
 
-* The Org guide and manual
+* Manuales y Guías de Org mode
 
-- Read the [[file:guide/index.html][online compact guide]] or download it as a [[file:orgguide.pdf][PDF document]].  The
-  compact guide is a ~40-pages introduction to Org mode.  It covers all
-  features in a basic way and has links to in-depth documentation in the
-  manual and on the web.
+- Lea la [[file:guide/index.html][guía compacta online]] o bájela como un  [[file:orgguide.pdf][documento PDF]]. la
+  guía compacta es una introducción a Org mode de ~40-páginas. Cubre todas
+  las características de forma sencilla y cuenta con links para profundizar
+  en la documentación del manual y de la web.
 
-- Read the [[file:manual/index.html][online manual]].  The manual covers the complete feature set with
-  all the bells and whistles, in a systematic way.  The main structure is
-  identical to the guide, so it is easy to go back and forth between basic
-  and advanced documentation.
+- Lea el [[file:manual/index.html][manual online]]. El manual abarca el conjunto completo de características 
+  con todas las ayudas y notas, de una manera sistemática. La estructura principal 
+  es idéntica a la guía, así que es fácil ir y venir entre la investigación básica
+  y documentación avanzada.
 
-- You can also read the entire manual online in a [[file:org.html][single monolithic file]].
+- También puede leer el manual en línea completa en un [[file:org.html][archivo único]]
 
   #+begin_html
   <a href="http://www.network-theory.co.uk/org/manual/">
@@ -42,24 +42,22 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-document
   </a>
   #+end_html
 
-- Download the manual as a ~200-pages [[file:org.pdf][PDF document]].
+- Descargar el manual, son ~200 páginas en un [[file:org.pdf][archivo PDF]].
 
-- Buy a paperback edition of the manual from [[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]]  One USD
-  of each book sold is donated to Org mode project.
+- Comprar una edición de bolsillo del manual desde [[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd.]] Un dolar
+   de cada libro vendido se dona al proyecto Org.
 
-- Translations of the manual:
-  - A [[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][Japanese translation]] of an older version (4.60), by Takeshi Okano.
-  - A [[http://gnu.manticore.es/manual-org-emacs][Spanish translation]] (version 6.21b).
+- Traducciones del manual:
+  - [[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][Traducción Japonesa]] de una versión vieja (4.60), por Takeshi Okano.
+  - [[http://gnu.manticore.es/manual-org-emacs][Traducción Española]] (version 6.21b).
 
-* The Org Reference card
-  - Download the [[file:orgcard.pdf][Refcard]] for org-mode.
-  - There is also a [[file:orgcard.txt][text version]] of the reference card.
+* Ficha de referencia Org
+  - Baje la [[file:orgcard.pdf][ficha de referencia]] de org-mode.
+  - Tambien hay una [[file:orgcard.txt][versión de texto]] de la ficha de referencia.
 
-* The Org-mode FAQ
-  - The [[http://orgmode.org/worg/org-faq.php][Org Mode FAQ]] is user-editable and is maintained by the community
-    behind the [[http://orgmode.org/worg/][Worg project]].
+* Las FAQ de Org-mode
+  - Las [[http://orgmode.org/worg/org-faq.php][FAQ de Org-mode]] es editable por el usuario y es mantenido por la comunidad
+     detrás de [[http://orgmode.org/worg/][Worg project]].
 
-* Tutorials
-  - A complete list of [[http://orgmode.org/worg/org-tutorials/index.php][Tutorials and screencasts]] is maintained by the [[http://orgmode.org/worg][Worg
-    project]].
-
+* Tutoriales
+  - Una lista completa de [[http://orgmode.org/worg/org-tutorials/index.php][tutoriales y screencasts]] es mantenida por el [[http://orgmode.org/worg][Worg project]].
