--- a/index.org
+++ b/index.org
@@ -16,6 +16,7 @@ var language = navigator.language;
 else
 var language = navigator.browserLanguage;
 if (language.indexOf('fr') > -1) document.location.href = '/fr/index.html';
+if (language.indexOf('es') > -1) document.location.href = '/es/index.html';
 if (language.indexOf('ja') > -1) document.location.href = '/ja/index.html';
 </script>
 #+end_html
