--- a/ja/org-mode-documentation.org
+++ b/ja/org-mode-documentation.org
@@ -42,3 +42,8 @@
 
 * チュートリアル
   - [[http://orgmode.org/worg/org-tutorials/index.php][チュートリアルとスクリーンキャスト]]の完全なリストが、[[http://orgmode.org/worg][Worgプロジェクト]]で管理されています。
+* Publications
+
+- Eric Schulte, Dan Davison, Thomas Dye, Carsten Dominik, [[http://www.jstatsoft.org/v46/i03][A Multi-Language
+  Computing Environment for Literate Programming and Reproducible Research]]
+  ([[http://www.jstatsoft.org/v46/i03/paper][pdf]]).  Journal of Statistical Software, Vol. 46, Issue 3, Jan 2012.
