--- a/org-mode-documentation.org
+++ b/org-mode-documentation.org
@@ -64,3 +64,8 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-document
   - A complete list of [[http://orgmode.org/worg/org-tutorials/index.php][Tutorials and screencasts]] is maintained by the [[http://orgmode.org/worg][Worg
     project]].
 
+* Publications
+
+- Eric Schulte, Dan Davison, Thomas Dye, Carsten Dominik, [[http://www.jstatsoft.org/v46/i03][A Multi-Language
+  Computing Environment for Literate Programming and Reproducible Research]]
+  ([[http://www.jstatsoft.org/v46/i03/paper][pdf]]).  Journal of Statistical Software, Vol. 46, Issue 3, Jan 2012.
