--- a/org-mode-news.org
+++ b/org-mode-news.org
@@ -26,6 +26,7 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-news.htm
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-03-16> Release 7.8.04 (bugfix release)
 - <2012-01-03> Release 7.8.03 (bugfix release)
 - <2011-12-12> Release 7.8, 7.8.01 and 7.8.02.  See the list of [[file:Changes.html][changes]].
 - <2011-12-12> The design and content of org's website has been refreshed.
@@ -43,4 +44,4 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-news.htm
   users into honorable Emacs users are coming to an end?  A [[https://github.com/hsitz/VimOrganizer][Vim clone of
   Org]] mode is be written by Herbert Sitz, and judging by the [[http://vimeo.com/17182850][videos]] it
   looks promising.
-- <2010-06-06> iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.5 introduces encryption.
+- <2010-06-06> iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.5 introduces encryption
