--- a/org-mode-news.org
+++ b/org-mode-news.org
@@ -26,6 +26,7 @@ if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-news.htm
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-03-17> Release 7.8.05 (bugfix release)
 - <2012-03-16> Release 7.8.04 (bugfix release)
 - <2012-01-03> Release 7.8.03 (bugfix release)
 - <2011-12-12> Release 7.8, 7.8.01 and 7.8.02.  See the list of [[file:Changes.html][changes]].
