--- a/ja/org-mode-news.org
+++ b/ja/org-mode-news.org
@@ -14,8 +14,9 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
-- <2012-01-17> バージョン 7.8.05 を公開（バグフィックス）
-- <2012-01-16> バージョン 7.8.04 を公開（バグフィックス）
+- <2012-03-19> バージョン 7.8.06 を公開（バグフィックス）
+- <2012-03-17> バージョン 7.8.05 を公開 *!Broken release!*
+- <2012-03-16> バージョン 7.8.04 を公開 *!Broken release!*
 - <2012-01-03> バージョン 7.8.03 を公開（バグフィックス）
 - <2011-12-12> バージョン 7.8、7.8.01、7.8.02 を公開（[[http://orgmode.org/Changes.html][変更点]]）
 - <2011-12-12> ウェブサイトのデザインとコンテンツを更新
