--- a/es/org-mode-news.org
+++ b/es/org-mode-news.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-03-31> Release 7.8.07 (bugfix release)
 - <2012-03-19> Release 7.8.06 (bugfix release)
 - <2012-03-17> Release 7.8.05 *!broken release!*
 - <2012-03-16> Release 7.8.04 *!broken release!*
