--- a/fr/org-mode-nouvelles.org
+++ b/fr/org-mode-nouvelles.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-03-31> Sortie de la version 7.8.07 (corrections).
 - <2012-03-17> Sortie de la version 7.8.06 (corrections mineures).
 - <2012-03-17> Sortie de la version 7.8.05 *Ne pas utiliser*
 - <2012-03-16> Sortie de la version 7.8.04 *Ne pas utiliser*
