--- a/ja/org-mode-news.org
+++ b/ja/org-mode-news.org
@@ -14,6 +14,7 @@
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2012-03-31> Release 7.8.07 (bugfix release)
 - <2012-03-19> バージョン 7.8.06 を公開（バグフィックス）
 - <2012-03-17> バージョン 7.8.05 を公開 *!Broken release!*
 - <2012-03-16> バージョン 7.8.04 を公開 *!Broken release!*
